<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_gameplay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    android:background="@drawable/stars1"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/timenum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="Time:"
        android:textColor="@android:color/white"
        android:textSize="29sp" />

    <TextView
        android:id="@+id/levelnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-smallcaps"
        android:text="Level:"
        android:textColor="@android:color/white"
        android:textSize="29sp"
        android:visibility="visible" />


    <TextView
        android:text="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textviewscore"
        android:textAlignment="center"
        android:layout_weight="0.65"
        android:textColor="@android:color/white"
        android:textSize="50sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.39">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.59"/>


        <Button
            android:id="@+id/topcolor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2.70"
            android:background="@mipmap/topcolorblue"
            android:text="yellow"
            android:textColor="@android:color/transparent" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.59"/>

    </TableRow>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.46"/>


    <TableLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/therightcolor"
                android:text="@string/buttontextyellow"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_red_dark"
                android:text="@string/buttontextblue"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:text="@string/buttontextgreen"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_green_dark"
                android:text="@string/buttontextred"
                android:textSize="30sp" />
        </TableRow>

    </TableLayout>

</LinearLayout>